--- a/.travis.yml
+++ b/.travis.yml
@@ -9,16 +9,16 @@ services:
 install:
   - echo "nothing needs to be installed"
 
-# Scripts to be run such as tests
+# Scripts to be run such as test
 before_script:
   - echo "no tests"
 
 script:
   - docker --version # print the version for logging
   - docker build -t simple-node .
-  - docker tag simple-node YOUR_DOCKER_HUB/simple-node:latest
+  - docker tag simple-node ddake2g/simple-node:latest
 
 # Tasks to perform after the process is successful. Formatting the Docker username and password as below enables you to programmatically log in without having the password exposed in logs.
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker push YOUR_DOCKER_HUB/simple-node
+  - docker push ddake2g/simple-node
